# TEK5600_Visualization

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main_old.cpp
exercises/: README.md
exercises/field_lines/: benchmark_generators.cpp  even_fieldlines_heatmap.cpp  main.cpp  method_comp.cpp
exercises/integrator_comp/: benchmark_integrators.cpp  comp_isabel.cpp  comp_metsim.cpp
exercises/lic/: lic_blending.cpp  lic_integrator_comparison.cpp  main.cpp  simple_lic.cpp
field_lines/: CMakeLists.txt  main.cpp
inc/: data_structures.h  helpers.h  integrators.h  lic.h  seeds.h  vec2.h  visualization.h
src/: helpers.cpp  integrators.cpp  lic.cpp  seeds.cpp  visualization.cpp
